--- a/05_Day05_FunctionalComponent/Core/list_todo/package.json
+++ b/05_Day05_FunctionalComponent/Core/list_todo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "more_forms",
+  "name": "list_todo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,9 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.3.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
